<resources>
    <string name="app_name">Appdoptame</string>
    <string name="facebook_app_id">1934456443435437</string>
    <string name="fb_login_protocol_scheme">fb1934456443435437</string>

    <!-- Strings for multiple uses -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login strings-->
    <string name="error_login">An error has occurred</string>
    <string name="firebase_error_login">Login error: Incorrect user</string>

    <!-- Post strings -->
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="age">Age</string>
    <string name="location">Location</string>

    <!-- Navbar strings -->
    <string name="title_activity_base"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prof">Perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="upload_pet">Subir animalito</string>
    <string name="notifications">Ver notificaciones</string>
    <string name="pet_house">Inicio</string>
    <string name="breed">Breed</string>
</resources>
